# MICA

./: .env  .env.example  .gitignore  2026-01-25-materials-intelligence-co-analyst-mica.txt  2026-01-27-caveat-the-messages-below-were-generated-by-the-u.txt  CLAUDE.md  README.md  docker-compose.yml  environment.yml  requirements.txt  test_queries.md
backend/: 2026-01-27-this-problem-hasnt-gone-away-in-the-open-web-ui.txt  Dockerfile  pyproject.toml  requirements.txt
backend/mica/: __init__.py  config.py  credentials.py
backend/mica/agents/: __init__.py  graph.py  orchestrator.py  state.py
backend/mica/api/: __init__.py  main.py  routes.py  websocket.py
backend/mica/llm/: __init__.py  argo.py  base.py  factory.py  gemini.py
backend/mica/logging/: __init__.py  session_logger.py
backend/mica/mcp_tools/: __init__.py  base.py  code_agent.py  doc_generator.py  excel_handler.py  local_data_analysis.py  local_document_search.py  pdf_rag.py  simulation.py  web_search.py
backend/sessions/0297cab5-f40d-4123-a7a2-9453a9947d52/: metadata.json  plan.json  query.txt
backend/sessions/07da983b-bdd6-455d-bc2a-0a65ccf84389/: approval.json  metadata.json  plan.json  query.txt
backend/sessions/07ffc58d-9db3-425e-b63a-a26a202e98b8/: metadata.json  plan.json  query.txt
backend/sessions/0bb156c3-ca6c-476f-aac5-a5cef63bcdec/: metadata.json  plan.json
backend/sessions/1d5d7cf5-172d-407f-bcf5-55f4d7917eb3/: approval.json  metadata.json  plan.json
backend/sessions/2111eeea-5901-4dc1-8c29-484726ad44ef/: approval.json  metadata.json  plan.json  query.txt
backend/sessions/2af0325a-59b9-44d5-b018-84c0487cf60c/: approval.json  metadata.json  plan.json  query.txt
backend/sessions/3ec847d9-eb47-4055-9298-db9ba35b1459/: metadata.json  plan.json  query.txt
backend/sessions/427cc5ef-4f7a-47fa-95c6-36f6c8360613/: metadata.json  plan.json  query.txt
backend/sessions/53f8ed9a-987a-466e-9274-4910c184f17b/: approval.json  metadata.json  plan.json  query.txt
(+192 files in other folders)
